src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_type_tag_should_work-8.snap
---
source: src/mail_parser.rs
expression: "cell_type_tag(\"TRIA7\")"
---
Ok(
    (
        "",
        TRIA7,
    ),
)
