src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_type_tag_should_work-9.snap
---
source: src/mail_parser.rs
expression: "cell_type_tag(\"QUAD4\")"
---
Ok(
    (
        "",
        QUAD4,
    ),
)
