src/parsers/snapshots/meshb__parsers__mail_parser__tests__cell_type_tag_should_work.snap
---
source: src/mail_parser.rs
expression: "cell_type_tag(\"POI1\")"
---
Ok(
    (
        "",
        POI1,
    ),
)
