src/parsers/snapshots/meshb__parsers__mail_parser__tests__comment_or_lineending_nook_1.snap
---
source: src/parsers/mail_parser.rs
expression: "comment_or_line_ending(\"ddf % ble &\\n\")"
---
Err(
    Error(
        Base {
            location: "ddf % ble &\n",
            kind: Expected(
                CrLf,
            ),
        },
    ),
)
