src/parsers/snapshots/meshb__parsers__mail_parser__tests__comment_or_lineending_ok_1.snap
---
source: src/parsers/mail_parser.rs
expression: "comment_or_line_ending(\"%ble\\n\")"
---
Ok(
    (
        "",
        (),
    ),
)
