src/parsers/snapshots/meshb__parsers__mail_parser__tests__comment_or_lineending_should_work-3.snap
---
source: src/mail_parser.rs
expression: "comment_or_line_ending(\"ddf % ble &\\n\")"
---
Err(
    Error(
        Base {
            location: "ddf % ble &\n",
            kind: Expected(
                CrLf,
            ),
        },
    ),
)
