src/parsers/snapshots/meshb__parsers__mail_parser__tests__end_section_nook.snap
---
source: src/parsers/mail_parser.rs
expression: "end_section_tag(\"TINSF\")"
---
Err(
    Error(
        Base {
            location: "TINSF",
            kind: Expected(
                Tag(
                    "FINSF",
                ),
            ),
        },
    ),
)
