src/parsers/snapshots/meshb__parsers__mail_parser__tests__end_section_ok.snap
---
source: src/parsers/mail_parser.rs
expression: "end_section_tag(\"FINSF\")"
---
Ok(
    (
        "",
        "FINSF",
    ),
)
